IALERT-3961: Add improvements to the diagnostics API. (#2730)
* Fix: Add more environment variables and make connection mode work.

* Build: Update the build version.

* Fix: Fix generate config script for rabbitmq.

* Fix: Fix errors in the generation script.

* Fix: Create the env file for 4 async threads by default.

* Fix: Make queues durable and update volume mounts.

* Fix: Add new volume for rabbitmq persistence.

* Fix add properties to improve persistence.

* Fix config file generation for persistence.

* Fix: Remove older config parameter.

* Fix: Remove properties that crash rabbitmq.

* Fix: Remove another invalid parameter.

* IAERT-3950: Add alert solution details to client header for http requests.

* Fix: Configure simple listener container and log simple listener properties.

* Fix: Sort by notification Ids and mark notifications as mapping.

* Fix: correct sort of jpa query.

* Fix: Change readonly flag on transactional.

* Fix: Revert recent changes.

* Fix: Add logging to debug restart issue.

* IALERT-3951: Add new table to identify notification batches.

* IALERT-3951: Add entity classes for notification batch table.

* IALERT-3951: Use batch repository when saving notifications.

* IALERT-3951: Implement the changes to find the batches that have unprocessed notifications.

* IALERT-3951: Iterate over pages of batch ids.

* IALERT-3951: Use a JPA query and refactor restart initializer.

* IALERT-3951: Fix the query for mapping to use the batch id.

* IALERT-3951: Add a changeset for upgrade scenarios and add more logging.

* IALERT-3951: Check for more notifications using the batch id.

* IALERT-3951: Fix the exists query.

* Fix: Add PR feedback.

* Fix: Remove duplicate declaration of the exchange.

* IALERT-3951: Implement PR feedback.

* Fix: Add the missing coypright headers.

* Fix: Fix the error with the script to create the conf file.

* Fix: update the config file generation.

* Feat: Add calculation of average message size to all queu